[gd_scene load_steps=3 format=3 uid="uid://cbh1pnl2688n4"]

[ext_resource type="Script" uid="uid://cnhfqy7cyset3" path="res://simple_demo.gd" id="1_demo"]
[ext_resource type="PackedScene" uid="uid://c30yebwmbtxq" path="res://ui/basekit_button.tscn" id="2_button"]

[node name="SimpleDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_demo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "üéÆ My Awesome Game"
horizontal_alignment = 1

[node name="BaseKitButton" parent="VBoxContainer" instance=ExtResource("2_button")]
layout_mode = 2
text = "ü¶ï BaseKit Button"

[node name="WelcomeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Connect your wallet to play!"
horizontal_alignment = 1

[node name="AvatarContainer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4

[node name="AvatarBG" type="ColorRect" parent="VBoxContainer/AvatarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.4, 0.8, 1)

[node name="AvatarText" type="Label" parent="VBoxContainer/AvatarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameArea" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="GameContent" type="Label" parent="VBoxContainer/GameArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "üéØ Game Content Here
üèÜ High Scores
üéÆ Play Now"
horizontal_alignment = 1
vertical_alignment = 1
